--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,11 @@
   "name": "server",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
+  "type": "module",
+
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www"
